k8s/address.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address
  template:
    metadata:
      labels:
        app: address
    spec:
      containers:
      - name: address
        image: docker.io/library/baoleme-backend-microservices:latest
        imagePullPolicy: Never
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"

---
# ========================
# Address PostgreSQL Deployment
# ========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-address
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-address
  template:
    metadata:
      labels:
        app: postgres-address
    spec:
      containers:
      - name: postgres-address
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-address-data
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
      volumes:
      - name: postgres-address-data
        persistentVolumeClaim:
          claimName: postgres-address-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-address
spec:
  selector:
    app: postgres-address
  ports:
  - port: 5432
    targetPort: 5432
