k8s/auth-mail.yaml
#########################################################
# Auth, Mail Combined Service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mail
  template:
    metadata:
      labels:
        app: auth-mail
    spec:
      containers:
      - name: auth-mail
        image: docker.io/library/baoleme-backend-microservices:latest
        imagePullPolicy: Never
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 3000
          name: http

---
#########################################################
# Service for Auth, Mail Combined Service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: auth-mail
spec:
  selector:
    app: auth-mail
  ports:
  - port: 3000
    targetPort: 3000
    name: http

---
#########################################################
# PostgreSQL for Auth, Mail Services
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth-mail
  template:
    metadata:
      labels:
        app: postgres-auth-mail
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-auth-mail-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth-mail
spec:
  selector:
    app: postgres-auth-mail
  ports:
  - port: 5432
    targetPort: 5432
