k8s/auth.yaml
#########################################################
# auth service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: docker.io/library/baoleme-backend-microservices:latest
        imagePullPolicy: Never
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
  - port: 3000
    targetPort: 3000
---
# ########################
# Auth PostgreSQL Deployment
# ########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
      - name: postgres-auth
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-auth-data
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
      volumes:
      - name: postgres-auth-data
        persistentVolumeClaim:
          claimName: postgres-auth-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
spec:
  selector:
    app: postgres-auth
  ports:
  - port: 5432
    targetPort: 5432
