k8s/cart-history-item.yaml
#########################################################
# Cart, History, Item Combined Service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-history-item
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-history-item
  template:
    metadata:
      labels:
        app: cart-history-item
    spec:
      containers:
      - name: cart-history-item
        image: docker.io/library/baoleme-backend-microservices:latest
        imagePullPolicy: Never
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 3000
          name: http

---
#########################################################
# Service for Cart, History, Item Combined Service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: cart-history-item
spec:
  selector:
    app: cart-history-item
  ports:
  - port: 3000
    targetPort: 3000
    name: http

---
#########################################################
# PostgreSQL for Cart, History, Item Services
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-cart-history-item
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-cart-history-item
  template:
    metadata:
      labels:
        app: postgres-cart-history-item
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-cart-history-item-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cart-history-item
spec:
  selector:
    app: postgres-cart-history-item
  ports:
  - port: 5432
    targetPort: 5432
