k8s/mail.yaml
# #############
# Mail Service
# #############
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
      - name: mail
        image: docker.io/library/baoleme-backend-microservices:latest
        imagePullPolicy: Never
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"

---
# ========================
# Mail PostgreSQL Deployment
# ========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-mail
  template:
    metadata:
      labels:
        app: postgres-mail
    spec:
      containers:
      - name: postgres-mail
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-mail-data
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
      volumes:
      - name: postgres-mail-data
        persistentVolumeClaim:
          claimName: postgres-mail-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-mail
spec:
  selector:
    app: postgres-mail
  ports:
  - port: 5432
    targetPort: 5432
